--- a/fxml/static/header_nav.fxml
+++ b/fxml/static/header_nav.fxml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.Slider?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -14,7 +16,10 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
@@ -179,7 +184,190 @@
                                           </HBox>
                                           <ScrollPane fitToWidth="true" hbarPolicy="NEVER" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" VBox.vgrow="ALWAYS">
                                              <content>
-                                                <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" style="-fx-background-color: transparent;" />
+                                                <VBox maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" spacing="15.0" style="-fx-background-color: transparent;">
+                                                   <children>
+                                                      <VBox>
+                                                         <children>
+                                                            <CheckBox fx:id="lengthCheckBox" mnemonicParsing="false" text="Length">
+                                                               <styleClass>
+                                                                  <String fx:value="text-color1" />
+                                                                  <String fx:value="small-title" />
+                                                               </styleClass>
+                                                            </CheckBox>
+                                                            <HBox>
+                                                               <children>
+                                                                  <TextField fx:id="lengthValue" alignment="CENTER" minWidth="0.0" prefWidth="20.0" style="-fx-padding: 2;" text="10" />
+                                                                  <Slider fx:id="lengthSlider" blockIncrement="1.0" majorTickUnit="10.0" max="60.0" maxWidth="300.0" min="1.0" minorTickCount="5" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" HBox.hgrow="ALWAYS" />
+                                                               </children>
+                                                            </HBox>
+                                                         </children>
+                                                      </VBox>
+                                                      <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                                         <children>
+                                                            <CheckBox fx:id="lengthCheckBox1" minWidth="100.0" mnemonicParsing="false" text="Type">
+                                                               <styleClass>
+                                                                  <String fx:value="text-color1" />
+                                                                  <String fx:value="small-title" />
+                                                               </styleClass>
+                                                            </CheckBox>
+                                                            <HBox alignment="CENTER_LEFT" spacing="2.0">
+                                                               <children>
+                                                                  <Button mnemonicParsing="false" styleClass="selection-button" text="Select a Type" />
+                                                                  <Button mnemonicParsing="false">
+                                                                     <graphic>
+                                                                        <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                                                           <image>
+                                                                              <Image url="@../icons/cross.png" />
+                                                                           </image>
+                                                                        </ImageView>
+                                                                     </graphic>
+                                                                  </Button>
+                                                               </children>
+                                                            </HBox>
+                                                         </children>
+                                                      </HBox>
+                                                      <HBox alignment="CENTER_LEFT" spacing="10.0">
+                                                         <children>
+                                                            <CheckBox fx:id="lengthCheckBox11" minWidth="100.0" mnemonicParsing="false" text="Linked with">
+                                                               <styleClass>
+                                                                  <String fx:value="text-color1" />
+                                                                  <String fx:value="small-title" />
+                                                               </styleClass>
+                                                            </CheckBox>
+                                                            <HBox alignment="CENTER_LEFT" spacing="2.0">
+                                                               <children>
+                                                                  <Button mnemonicParsing="false" styleClass="selection-button" text="Select a Word" />
+                                                                  <Button mnemonicParsing="false">
+                                                                     <graphic>
+                                                                        <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                                                           <image>
+                                                                              <Image url="@../icons/cross.png" />
+                                                                           </image>
+                                                                        </ImageView>
+                                                                     </graphic>
+                                                                  </Button>
+                                                               </children>
+                                                            </HBox>
+                                                         </children>
+                                                      </HBox>
+                                                      <VBox spacing="5.0">
+                                                         <children>
+                                                            <CheckBox fx:id="lengthCheckBox2" mnemonicParsing="false" text="Emotionality Range">
+                                                               <styleClass>
+                                                                  <String fx:value="text-color1" />
+                                                                  <String fx:value="small-title" />
+                                                               </styleClass>
+                                                            </CheckBox>
+                                                            <GridPane hgap="20.0">
+                                                              <columnConstraints>
+                                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                              </columnConstraints>
+                                                              <rowConstraints>
+                                                                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                              </rowConstraints>
+                                                               <children>
+                                                                  <HBox alignment="CENTER_LEFT" spacing="2.0">
+                                                                     <children>
+                                                                        <Label text="Min" textFill="WHITE" />
+                                                                        <TextField fx:id="lengthValue1" alignment="CENTER" minWidth="0.0" prefWidth="20.0" style="-fx-padding: 2;" text="10" />
+                                                                        <Slider fx:id="emotionalitySlider" blockIncrement="0.05" majorTickUnit="0.25" max="1.0" showTickMarks="true" snapToTicks="true" value="0.5" />
+                                                                     </children>
+                                                                  </HBox>
+                                                                  <HBox alignment="CENTER_LEFT" spacing="2.0" GridPane.columnIndex="1">
+                                                                     <children>
+                                                                        <Label text="Max" textFill="WHITE" />
+                                                                        <TextField fx:id="lengthValue2" alignment="CENTER" minWidth="0.0" prefWidth="20.0" style="-fx-padding: 2;" text="10" />
+                                                                        <Slider fx:id="emotionalitySlider1" blockIncrement="0.05" majorTickUnit="0.25" max="1.0" showTickMarks="true" snapToTicks="true" value="0.5" />
+                                                                     </children>
+                                                                  </HBox>
+                                                               </children>
+                                                               <VBox.margin>
+                                                                  <Insets left="20.0" right="20.0" />
+                                                               </VBox.margin>
+                                                            </GridPane>
+                                                         </children>
+                                                      </VBox>
+                                                      <VBox spacing="5.0">
+                                                         <children>
+                                                            <CheckBox fx:id="lengthCheckBox21" mnemonicParsing="false" text="Vulgarity Range">
+                                                               <styleClass>
+                                                                  <String fx:value="text-color1" />
+                                                                  <String fx:value="small-title" />
+                                                               </styleClass>
+                                                            </CheckBox>
+                                                            <GridPane hgap="20.0">
+                                                               <columnConstraints>
+                                                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                               </columnConstraints>
+                                                               <rowConstraints>
+                                                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                               </rowConstraints>
+                                                               <children>
+                                                                  <HBox alignment="CENTER_LEFT" spacing="2.0">
+                                                                     <children>
+                                                                        <Label text="Min" textFill="WHITE" />
+                                                                        <TextField fx:id="lengthValue11" alignment="CENTER" minWidth="0.0" prefWidth="20.0" style="-fx-padding: 2;" text="10" />
+                                                                        <Slider fx:id="emotionalitySlider1" blockIncrement="0.05" majorTickUnit="0.25" max="1.0" showTickMarks="true" snapToTicks="true" value="0.5" />
+                                                                     </children>
+                                                                  </HBox>
+                                                                  <HBox alignment="CENTER_LEFT" spacing="2.0" GridPane.columnIndex="1">
+                                                                     <children>
+                                                                        <Label text="Max" textFill="WHITE" />
+                                                                        <TextField fx:id="lengthValue21" alignment="CENTER" minWidth="0.0" prefWidth="20.0" style="-fx-padding: 2;" text="10" />
+                                                                        <Slider fx:id="emotionalitySlider11" blockIncrement="0.05" majorTickUnit="0.25" max="1.0" showTickMarks="true" snapToTicks="true" value="0.5" />
+                                                                     </children>
+                                                                  </HBox>
+                                                               </children>
+                                                               <VBox.margin>
+                                                                  <Insets left="20.0" right="20.0" />
+                                                               </VBox.margin>
+                                                            </GridPane>
+                                                         </children>
+                                                      </VBox>
+                                                      <VBox spacing="5.0">
+                                                         <children>
+                                                            <CheckBox fx:id="lengthCheckBox22" mnemonicParsing="false" text="Formality Range">
+                                                               <styleClass>
+                                                                  <String fx:value="text-color1" />
+                                                                  <String fx:value="small-title" />
+                                                               </styleClass>
+                                                            </CheckBox>
+                                                            <GridPane hgap="20.0">
+                                                               <columnConstraints>
+                                                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                               </columnConstraints>
+                                                               <rowConstraints>
+                                                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                               </rowConstraints>
+                                                               <children>
+                                                                  <HBox alignment="CENTER_LEFT" spacing="2.0">
+                                                                     <children>
+                                                                        <Label text="Min" textFill="WHITE" />
+                                                                        <TextField fx:id="lengthValue12" alignment="CENTER" minWidth="0.0" prefWidth="20.0" style="-fx-padding: 2;" text="10" />
+                                                                        <Slider fx:id="emotionalitySlider1" blockIncrement="0.05" majorTickUnit="0.25" max="1.0" showTickMarks="true" snapToTicks="true" value="0.5" />
+                                                                     </children>
+                                                                  </HBox>
+                                                                  <HBox alignment="CENTER_LEFT" spacing="2.0" GridPane.columnIndex="1">
+                                                                     <children>
+                                                                        <Label text="Max" textFill="WHITE" />
+                                                                        <TextField fx:id="lengthValue22" alignment="CENTER" minWidth="0.0" prefWidth="20.0" style="-fx-padding: 2;" text="10" />
+                                                                        <Slider fx:id="emotionalitySlider12" blockIncrement="0.05" majorTickUnit="0.25" max="1.0" showTickMarks="true" snapToTicks="true" value="0.5" />
+                                                                     </children>
+                                                                  </HBox>
+                                                               </children>
+                                                               <VBox.margin>
+                                                                  <Insets left="20.0" right="20.0" />
+                                                               </VBox.margin>
+                                                            </GridPane>
+                                                         </children>
+                                                      </VBox>
+                                                   </children>
+                                                   <padding>
+                                                      <Insets left="20.0" right="20.0" />
+                                                   </padding></VBox>
                                              </content>
                                           </ScrollPane>
                                        </children>
