--- a/fxml/static/header_nav.fxml
+++ b/fxml/static/header_nav.fxml
@@ -194,12 +194,34 @@
                                                                   <String fx:value="small-title" />
                                                                </styleClass>
                                                             </CheckBox>
-                                                            <HBox fx:id="wordLengthContainer">
+                                                            <GridPane fx:id="wordLengthContainer" hgap="20.0">
+                                                               <columnConstraints>
+                                                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                                               </columnConstraints>
+                                                               <rowConstraints>
+                                                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                                               </rowConstraints>
                                                                <children>
-                                                                  <TextField fx:id="wordLengthField" alignment="CENTER" minWidth="0.0" prefWidth="20.0" style="-fx-padding: 2;" text="10" />
-                                                                  <Slider fx:id="wordLengthSlider" blockIncrement="1.0" majorTickUnit="10.0" max="60.0" maxWidth="300.0" min="1.0" minorTickCount="5" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="10.0" HBox.hgrow="ALWAYS" />
+                                                                  <HBox alignment="CENTER_LEFT" spacing="2.0">
+                                                                     <children>
+                                                                        <Label minWidth="21.0" text="Min" textFill="WHITE" />
+                                                                        <TextField fx:id="wordMinLengthField" alignment="CENTER" minWidth="30.0" prefWidth="20.0" style="-fx-padding: 2;" text="30" />
+                                                                        <Slider fx:id="wordMinLengthSlider" blockIncrement="1.0" majorTickUnit="15.0" max="60.0" minorTickCount="2" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="30.0" />
+                                                                     </children>
+                                                                  </HBox>
+                                                                  <HBox alignment="CENTER_LEFT" spacing="2.0" GridPane.columnIndex="1">
+                                                                     <children>
+                                                                        <Label minWidth="23.0" text="Max" textFill="WHITE" />
+                                                                        <TextField fx:id="wordMaxLengthField" alignment="CENTER" minWidth="30.0" prefWidth="20.0" style="-fx-padding: 2;" text="30" />
+                                                                        <Slider fx:id="wordMaxLengthSlider" blockIncrement="1.0" majorTickUnit="15.0" max="60.0" minorTickCount="2" showTickLabels="true" showTickMarks="true" snapToTicks="true" value="30.0" />
+                                                                     </children>
+                                                                  </HBox>
                                                                </children>
-                                                            </HBox>
+                                                               <VBox.margin>
+                                                                  <Insets left="20.0" />
+                                                               </VBox.margin>
+                                                            </GridPane>
                                                          </children>
                                                       </VBox>
                                                       <HBox alignment="CENTER_LEFT" spacing="10.0">
@@ -283,7 +305,7 @@
                                                                   </HBox>
                                                                </children>
                                                                <VBox.margin>
-                                                                  <Insets left="20.0" right="20.0" />
+                                                                  <Insets left="20.0" />
                                                                </VBox.margin>
                                                             </GridPane>
                                                          </children>
@@ -321,7 +343,7 @@
                                                                   </HBox>
                                                                </children>
                                                                <VBox.margin>
-                                                                  <Insets left="20.0" right="20.0" />
+                                                                  <Insets left="20.0" />
                                                                </VBox.margin>
                                                             </GridPane>
                                                          </children>
@@ -359,7 +381,7 @@
                                                                   </HBox>
                                                                </children>
                                                                <VBox.margin>
-                                                                  <Insets left="20.0" right="20.0" />
+                                                                  <Insets left="20.0" />
                                                                </VBox.margin>
                                                             </GridPane>
                                                          </children>
