--- a/fxml/style/redefined.css
+++ b/fxml/style/redefined.css
@@ -112,6 +112,8 @@
     -fx-text-fill: #e9e9e9;
 }
 
+/*combo box*/
+
 .combo-box{
     -fx-background-color: transparent;
     -fx-border-color: #ffffff13;
@@ -120,9 +122,24 @@
     -fx-text-fill: #e9e9e9;
 }
 
-.combo-box .list-cell{
-    -fx-text-fill: #7c7c7c;
+.combo-box .cell {
+    -fx-text-fill: #cacaca;
 }
+
+.combo-box .list-view .list-cell {
+    -fx-text-fill: black;
+}
+
+.combo-box .list-view .list-cell:hover {
+    -fx-background-color: #e0e0e0;
+}
+
+.combo-box .list-view .list-cell:selected {
+    -fx-background-color: #cccccc;
+    -fx-text-fill: black;
+}
+
+/*color picker*/
 
 .color-picker{
     -fx-background-color: #141414;
@@ -133,6 +150,8 @@
 .color-picker-label{
     -fx-text-fill: #929292;
 }
+
+/*text area*/
 
 .text-area{
     -fx-background-color: #ffffff13;
