--- a/fxml/fragments/editor/item_checkbox.fxml
+++ b/fxml/fragments/editor/item_checkbox.fxml
@@ -8,14 +8,13 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 
-
-<HBox alignment="CENTER_LEFT" prefHeight="0.0" spacing="5.0" styleClass="editor-item" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fragments.EditorItemCheckboxController" fx:id="container">
+<HBox fx:id="container" alignment="CENTER_LEFT" prefHeight="0.0" spacing="2.0" styleClass="editor-item" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.fragments.EditorItemCheckboxController">
    <children>
-      <CheckBox mnemonicParsing="false" fx:id="checkbox" />
-      <Label styleClass="text-color1" text="a" fx:id="ObjectLabel" />
-      <Button mnemonicParsing="false" fx:id="deleteObjectButton">
+      <CheckBox fx:id="checkbox" mnemonicParsing="false" />
+      <Label fx:id="ObjectLabel" minWidth="10.0" styleClass="text-color1" text="a" />
+      <Button fx:id="deleteObjectButton" mnemonicParsing="false">
          <graphic>
-            <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../icons/cross.png" />
                </image>
